--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
 
 <!-- VIDEO -->
 <div class="videoBox">
-    <a href="https://www.youtube.com/watch?v=OY2L6-VwWqY" target="_blank">
-        <img class="videoThumb" src="https://img.youtube.com/vi/OY2L6-VwWqY/sddefault.jpg">
+    <a href="https://youtube.com/shorts/cvfCuMhkti0" target="_blank">
+        <img class="videoThumb" 
+             src="https://img.youtube.com/vi/cvfCuMhkti0/hqdefault.jpg">
     </a>
 </div>
 
+
 <!-- CHỮ CHẠY -->
 <div class="marquee">
-    💖 LỚP 12A1 KÍNH CHÚC THẦY CÔ NGÀY 20/11 VUI VẺ – HẠNH PHÚC – TRÀN ĐẦY YÊU THƯƠNG 💖
+    💖 LỚP 12A1 KÍNH CHÚC THẦY CÔ LUÔN MẠNH KHỎE - HẠNH PHÚC - GIỮ MÃI NGỌN LỬA ĐAM MÊ TRÊN HÀNH TRINH GIEO CHỮ 💖
 </div>
 
 <!-- HOA RƠI -->
