--- a/index.html
+++ b/index.html
@@ -1,127 +1,157 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chúc Mừng Ngày Nhà Giáo Việt Nam 20/11</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chúc Mừng Ngày Nhà Giáo Việt Nam 20/11</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
 
-<style>
-    body {
-        margin: 0;
-        background: linear-gradient(to bottom, #ffe5ef, #ffddeb, #ffeef7, white);
-        font-family: "Poppins", sans-serif;
-        overflow-x: hidden;
-        text-align: center;
-    }
+    <style>
+        body {
+            margin: 0;
+            background: linear-gradient(to bottom, #ffe4ec, #ffdbea, #fff);
+            font-family: "Poppins", sans-serif;
+            text-align: center;
+            overflow-x: hidden;
+            padding-top: 140px; /* CHỪA CHỖ LOGO - KHÔNG ĐỤNG CHỮ */
+        }
 
-    /* LOGO + LỚP 12A1 */
-    .logoBox {
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        width: 95px;
-        text-align: center;
-        z-index: 1000;
-    }
+        /* LOGO */
+        .logoBox {
+            position: fixed;
+            top: 15px;
+            right: 15px;
+            width: 95px;
+            text-align: center;
+            z-index: 2000;
+        }
 
-    .logo {
-        width: 80px;
-        height: 80px;
-        background-image: url('logo.png');
-        background-size: cover;
-        background-position: center;
-        border-radius: 10px;
-        box-shadow: 0 0 8px rgba(0,0,0,0.2);
-        margin: 0 auto;
-    }
+        .logo {
+            width: 75px;
+            height: 75px;
+            border-radius: 16px;
+            background-size: cover;
+            background-position: center;
+            background-image: url('logo.png');
+            background-color: white;
+            padding: 4px;
+            box-shadow: 0 0 12px rgba(0,0,0,0.25);
+        }
 
-    .logoText {
-        margin-top: 5px;
-        font-size: 15px;
-        font-weight: 900;
-        color: #fff6c0;
-        text-shadow:
-            0 0 4px #ffdd55,
-            0 0 6px #ffcc33,
-            0 0 10px #ffaa00;
-    }
+        .logoText {
+            font-size: 14px;
+            margin-top: 4px;
+            font-weight: 900;
+            color: #ffd700;
+            text-shadow: 0 0 5px #ff8800;
+            background: rgba(255,255,255,0.85);
+            padding: 4px 10px;
+            border-radius: 6px;
+        }
 
-    /* TIÊU ĐỀ */
-    h1 {
-        margin-top: 110px;
-        font-family: "Pacifico", cursive;
-        font-size: 32px;
-        font-weight: 600;
-        color: #d12e5f;
-        padding: 0 15px;
-        line-height: 1.3;
-    }
+        /* TIÊU ĐỀ */
+        h1 {
+            font-family: "Pacifico", cursive;
+            font-size: 42px;
+            color: #d12e5f;
+            padding: 0 10px;
+        }
 
-    /* VIDEO */
-    .videoBox {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-    }
+        /* KHUNG VIDEO (thumbnail) */
+        .videoBox {
+            width: 92%;
+            margin: 20px auto;
+            background: white;
+            padding: 12px;
+            border-radius: 22px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.15);
+        }
 
-    .videoThumb {
-        width: 88%;
-        max-width: 450px;
-        border-radius: 15px;
-        box-shadow: 0 0 12px #ffb6c1;
-    }
+        .videoThumb {
+            width: 100%;
+            border-radius: 18px;
+            border: 3px solid #ffb4c7;
+            box-shadow: 0 0 15px rgba(255,182,193,0.5);
+        }
 
-    /* CHỮ CHẠY */
-    .marquee {
-        position: fixed;
-        bottom: 12px;
-        width: 100%;
-        font-size: 16px;
-        font-weight: 700;
-        color: #c0392b;
-        white-space: nowrap;
-        overflow: hidden;
-        animation: run 12s linear infinite;
-        z-index: 999;
-    }
+        /* CHỮ CHẠY */
+        .marqueeBox {
+            width: 100%;
+            overflow: hidden;
+            margin-top: 25px;
+        }
 
-    @keyframes run {
-        from { transform: translateX(100%); }
-        to { transform: translateX(-100%); }
-    }
+        .marquee {
+            display: inline-block;
+            white-space: nowrap;
+            font-size: 20px;
+            font-weight: 700;
+            color: #c0392b;
+            padding-left: 100%;
+            animation: marquee 12s linear infinite;
+        }
 
-</style>
+        @keyframes marquee {
+            0% {
+                transform: translateX(0);
+            }
+
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
+        /* MOBILE OPTIMIZE */
+        @media (max-width: 480px) {
+            body {
+                padding-top: 160px;
+            }
+
+            h1 {
+                font-size: 30px;
+            }
+
+            .logo {
+                width: 65px;
+                height: 65px;
+            }
+
+            .videoThumb {
+                border-radius: 16px;
+            }
+        }
+    </style>
 </head>
 
 <body>
 
-<!-- LOGO -->
-<div class="logoBox">
-    <div class="logo"></div>
-    <div class="logoText">LỚP 12A1</div>
-</div>
+    <!-- LOGO -->
+    <div class="logoBox">
+        <div class="logo"></div>
+        <div class="logoText">LỚP 12A1</div>
+    </div>
 
-<!-- TIÊU ĐỀ -->
-<h1>🌸 Chúc Mừng Ngày Nhà Giáo Việt Nam 20/11 🌸</h1>
+    <!-- TIÊU ĐỀ -->
+    <h1>🌸 Chúc Mừng Ngày Nhà Giáo Việt Nam 20/11 🌸</h1>
 
-<!-- VIDEO -->
-<div class="videoBox">
-    <a href="https://youtube.com/shorts/cvfCuMhkti0" target="_blank">
-        <img class="videoThumb" 
-             src="https://img.youtube.com/vi/cvfCuMhkti0/hqdefault.jpg">
-    </a>
-</div>
+    <!-- VIDEO -->
+    <div class="videoBox">
+        <a href="https://youtube.com/shorts/cvfCuMhkti0" target="_blank">
+            <img class="videoThumb"
+                 src="https://img.youtube.com/vi/cvfCuMhkti0/hqdefault.jpg">
+        </a>
+    </div>
 
+    <!-- CHỮ CHẠY -->
+    <div class="marqueeBox">
+        <div class="marquee">
+            💖 LỚP 12A1 KÍNH CHÚC THẦY CÔ LUÔN MẠNH KHỎE – HẠNH PHÚC – GIỮ NGỌN LỬA ĐAM MÊ TRÊN HÀNH TRÌNH GIEO CHỮ 💖
+        </div>
+    </div>
 
-<!-- CHỮ CHẠY -->
-<div class="marquee">
-    💖 LỚP 12A1 KÍNH CHÚC THẦY CÔ LUÔN MẠNH KHỎE - HẠNH PHÚC - GIỮ MÃI NGỌN LỬA ĐAM MÊ TRÊN HÀNH TRINH GIEO CHỮ 💖
-</div>
-
-<!-- HOA RƠI -->
-<script type="text/javascript" src="http://webquangnam.com/jsShare/hoa-dao-roi.js"></script>
+    <!-- HOA RƠI -->
+    <script src="http://webquangnam.com/jsShare/hoa-dao-roi.js"></script>
 
 </body>
 </html>
