--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chúc Mừng Ngày Nhà Giáo Việt Nam 20/11</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
+
 
     <style>
         body {
@@ -19,42 +20,47 @@
 
         /* LOGO */
         .logoBox {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            /* Flex để căn giữa */
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            width: auto;
+            text-align: center;
+            z-index: 2000;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 110px; /* đảm bảo chữ và logo nằm trong cùng width */
-            z-index: 2000;
+            align-items: center; /* căn giữa LOGO + CHỮ */
         }
 
+        /* LOGO */
         .logo {
-            width: 78px;
-            height: 78px;
-            border-radius: 18px;
-            background-image: url('logo.png');
+            width: 75px;
+            height: 75px;
+            border-radius: 16px;
             background-size: cover;
             background-position: center;
-            background-color: #ffffff;
-            padding: 5px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.25);
+            background-image: url('logo.png');
+            background-color: white;
+            padding: 4px;
+            box-shadow: 0 0 12px rgba(0,0,0,0.25);
         }
 
+        /* CHỮ 12A1 — 1 DÒNG, GIỮ NGUYÊN TỪ */
         .logoText {
             margin-top: 6px;
+            font-family: 'Orbitron', sans-serif;
             font-size: 15px;
             font-weight: 900;
-            padding: 5px 14px;
-            color: #4DA3FF; /* XANH DA TRỜI */
-            background: rgba(255, 255, 255, 0.90);
+            background: rgba(255,255,255,0.95);
+            color: #000;
+            padding: 5px 12px;
             border-radius: 10px;
             border: 2px solid #fff;
-            text-shadow: 0 0 3px rgba(0,0,0,0.25), 0 0 6px rgba(77,163,255,0.6), 0 0 12px rgba(77,163,255,0.4);
-            box-shadow: 0 0 6px rgba(77,163,255,0.25), 0 0 12px rgba(77,163,255,0.25);
+            white-space: nowrap; /* NGĂN XUỐNG DÒNG */
+            text-align: center;
+            line-height: 1; /* cực gọn chữ */
         }
+
+
 
 
         /* TIÊU ĐỀ */
